[#11736] fix(core): retry failed entity change log listeners