@@ -20,13 +20,13 @@ package org.apache.gravitino.storage.relational;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
-import java.util.function.LongSupplier;
+import javax.annotation.Nullable;
 import org.apache.gravitino.storage.relational.mapper.EntityChangeLogMapper;
 import org.apache.gravitino.storage.relational.po.cache.EntityChangeRecord;
 import org.apache.gravitino.storage.relational.utils.SessionUtils;
@@ -37,26 +37,27 @@ import org.slf4j.LoggerFactory;
  * Global poller for {@code entity_change_log}.
  *
  * <p>The poller owns the single high-water mark for a Gravitino server process and dispatches each
- * consumed batch to registered listeners. Listeners should only perform idempotent local cache
- * invalidation. The cursor always advances after dispatch regardless of individual listener
- * failures, so a faulty listener cannot block other listeners or prevent pruning.
+ * consumed batch to registered listeners. The cursor advances only after every listener applies the
+ * batch. If a listener throws, the immutable batch stays in memory and the next poll retries only
+ * the listeners that have not succeeded yet.
+ *
+ * <p>A listener that throws after partially applying a batch receives the whole batch again, so
+ * listeners must make each callback atomic or tolerate retrying changes they already applied.
  */
 public class EntityChangeLogPoller implements AutoCloseable {
 
   private static final Logger LOG = LoggerFactory.getLogger(EntityChangeLogPoller.class);
 
-  /** Max entity-change rows to fetch per poller cycle. */
-  private static final int ENTITY_CHANGE_POLLER_MAX_ROWS = 500;
+  /** Max entity-change rows to fetch per batch. */
+  private static final int ENTITY_CHANGE_POLLER_MAX_ROWS = 2000;
 
   private final List<EntityChangeLogListener> listeners = new CopyOnWriteArrayList<>();
   private final long pollIntervalSecs;
-  private final long retentionMs;
-  private final long cleanupIntervalMs;
-  private final LongSupplier clockMs;
+
+  @Nullable private BatchDelivery pendingDelivery;
 
   private ScheduledExecutorService scheduler;
   private volatile long entityPollHighWaterId = 0;
-  private volatile long lastCleanupMs = Long.MIN_VALUE;
 
   /**
    * Creates an {@link EntityChangeLogPoller}.
@@ -64,34 +65,8 @@ public class EntityChangeLogPoller implements AutoCloseable {
    * @param pollIntervalSecs interval between successive polling cycles
    */
   public EntityChangeLogPoller(long pollIntervalSecs) {
-    this(
-        pollIntervalSecs,
-        TimeUnit.DAYS.toMillis(1),
-        TimeUnit.HOURS.toMillis(1),
-        System::currentTimeMillis);
-  }
-
-  /**
-   * Creates an {@link EntityChangeLogPoller}.
-   *
-   * @param pollIntervalSecs interval between successive polling cycles
-   * @param retentionMs entity change retention in milliseconds, or 0 to disable cleanup
-   * @param cleanupIntervalMs interval between successive cleanup attempts in milliseconds
-   */
-  public EntityChangeLogPoller(long pollIntervalSecs, long retentionMs, long cleanupIntervalMs) {
-    this(pollIntervalSecs, retentionMs, cleanupIntervalMs, System::currentTimeMillis);
-  }
-
-  @VisibleForTesting
-  EntityChangeLogPoller(
-      long pollIntervalSecs, long retentionMs, long cleanupIntervalMs, LongSupplier clockMs) {
     Preconditions.checkArgument(pollIntervalSecs > 0, "pollIntervalSecs must be positive");
-    Preconditions.checkArgument(retentionMs >= 0, "retentionMs must be non-negative");
-    Preconditions.checkArgument(cleanupIntervalMs > 0, "cleanupIntervalMs must be positive");
     this.pollIntervalSecs = pollIntervalSecs;
-    this.retentionMs = retentionMs;
-    this.cleanupIntervalMs = cleanupIntervalMs;
-    this.clockMs = clockMs;
   }
 
   /**
@@ -128,6 +103,10 @@ public class EntityChangeLogPoller implements AutoCloseable {
         getOrDefault(
             SessionUtils.getWithoutCommit(
                 EntityChangeLogMapper.class, EntityChangeLogMapper::selectMaxChangeId));
+    LOG.info(
+        "Starting entity change log poller at high-water id {} with a {} second interval",
+        entityPollHighWaterId,
+        pollIntervalSecs);
 
     scheduler =
         Executors.newSingleThreadScheduledExecutor(
@@ -169,30 +148,43 @@ public class EntityChangeLogPoller implements AutoCloseable {
   }
 
   private synchronized void doPollChanges() {
-    List<EntityChangeRecord> changes = fetchEntityChanges();
-    if (changes.isEmpty()) {
-      pruneExpiredChangesIfNeeded();
+    BatchDelivery delivery = pendingDelivery;
+    if (delivery != null) {
+      LOG.debug(
+          "Retrying entity change log batch with {} record(s), id range [{}, {}], for {} pending "
+              + "listener(s)",
+          delivery.changes.size(),
+          delivery.firstChangeId(),
+          delivery.lastChangeId,
+          delivery.pendingListeners.size());
+      deliver(delivery);
       return;
     }
 
-    long maxSeenId = entityPollHighWaterId;
-    for (EntityChangeRecord change : changes) {
-      if (change.getId() > maxSeenId) {
-        maxSeenId = change.getId();
-      }
+    delivery = fetchNextDelivery();
+    if (delivery != null) {
+      deliver(delivery);
+    }
+  }
+
+  @Nullable
+  private BatchDelivery fetchNextDelivery() {
+    List<EntityChangeRecord> changes = fetchEntityChanges();
+    if (changes.isEmpty()) {
+      return null;
     }
 
-    List<EntityChangeRecord> dispatchedChanges = Collections.unmodifiableList(changes);
-    for (EntityChangeLogListener listener : listeners) {
-      try {
-        listener.onEntityChange(dispatchedChanges);
-      } catch (Exception e) {
-        LOG.warn("Entity change listener {} failed", listener.getClass().getName(), e);
-      }
-    }
-
-    entityPollHighWaterId = maxSeenId;
-    pruneExpiredChangesIfNeeded();
+    List<EntityChangeRecord> immutableChanges = List.copyOf(changes);
+    long lastChangeId = immutableChanges.get(immutableChanges.size() - 1).getId();
+    BatchDelivery delivery =
+        new BatchDelivery(immutableChanges, lastChangeId, List.copyOf(listeners));
+    LOG.debug(
+        "Fetched {} entity change log record(s) after cursor {}, id range [{}, {}]",
+        immutableChanges.size(),
+        entityPollHighWaterId,
+        delivery.firstChangeId(),
+        delivery.lastChangeId);
+    return delivery;
   }
 
   private List<EntityChangeRecord> fetchEntityChanges() {
@@ -218,31 +210,88 @@ public class EntityChangeLogPoller implements AutoCloseable {
     return false;
   }
 
-  private void pruneExpiredChangesIfNeeded() {
-    if (retentionMs <= 0) {
-      return;
-    }
+  private static long getOrDefault(Long value) {
+    return value == null ? 0L : value;
+  }
 
-    long now = clockMs.getAsLong();
-    if (lastCleanupMs != Long.MIN_VALUE && now - lastCleanupMs < cleanupIntervalMs) {
-      return;
-    }
-
-    long before = now - retentionMs;
-    try {
-      SessionUtils.doWithoutCommit(
-          EntityChangeLogMapper.class, mapper -> mapper.pruneOldEntityChanges(before));
-    } catch (Exception e) {
-      LOG.warn("Failed to prune expired entity change logs before {}", before, e);
-    } finally {
-      // Always advance the cursor regardless of success or failure. A transient DB error
-      // should not cause repeated prune attempts on every poll cycle (every few seconds)
-      // until one eventually succeeds — the next cleanup will happen after cleanupIntervalMs.
-      lastCleanupMs = now;
+  private void deliver(BatchDelivery delivery) {
+    List<EntityChangeLogListener> failedListeners = notifyListeners(delivery);
+    if (failedListeners.isEmpty()) {
+      long previousHighWaterId = entityPollHighWaterId;
+      entityPollHighWaterId = delivery.lastChangeId;
+      pendingDelivery = null;
+      LOG.info(
+          "Consumed {} entity change log record(s), id range [{}, {}]; cursor advanced from {} to "
+              + "{}",
+          delivery.changes.size(),
+          delivery.firstChangeId(),
+          delivery.lastChangeId,
+          previousHighWaterId,
+          entityPollHighWaterId);
+    } else {
+      pendingDelivery = delivery.retryOnly(failedListeners);
+      LOG.error(
+          "Entity change log cursor is paused at id {} because {} listener(s) failed to apply "
+              + "batch id range [{}, {}]",
+          entityPollHighWaterId,
+          failedListeners.size(),
+          delivery.firstChangeId(),
+          delivery.lastChangeId);
     }
   }
 
-  private static long getOrDefault(Long value) {
-    return value == null ? 0L : value;
+  private List<EntityChangeLogListener> notifyListeners(BatchDelivery delivery) {
+    List<EntityChangeLogListener> failedListeners = new ArrayList<>();
+    for (EntityChangeLogListener listener : delivery.pendingListeners) {
+      if (!listeners.contains(listener)) {
+        LOG.debug(
+            "Skipping unregistered entity change log listener {} for batch id range [{}, {}]",
+            listener.getClass().getName(),
+            delivery.firstChangeId(),
+            delivery.lastChangeId);
+        continue;
+      }
+
+      try {
+        listener.onEntityChange(delivery.changes);
+        LOG.debug(
+            "Entity change log listener {} consumed batch id range [{}, {}]",
+            listener.getClass().getName(),
+            delivery.firstChangeId(),
+            delivery.lastChangeId);
+      } catch (Exception e) {
+        failedListeners.add(listener);
+        LOG.warn(
+            "Entity change log listener {} failed to consume batch id range [{}, {}]",
+            listener.getClass().getName(),
+            delivery.firstChangeId(),
+            delivery.lastChangeId,
+            e);
+      }
+    }
+    return failedListeners;
+  }
+
+  private static class BatchDelivery {
+    private final List<EntityChangeRecord> changes;
+    private final long lastChangeId;
+    private final List<EntityChangeLogListener> pendingListeners;
+
+    private BatchDelivery(
+        List<EntityChangeRecord> changes,
+        long lastChangeId,
+        List<EntityChangeLogListener> pendingListeners) {
+      this.changes = changes;
+      this.lastChangeId = lastChangeId;
+      this.pendingListeners = pendingListeners;
+    }
+
+    private BatchDelivery retryOnly(List<EntityChangeLogListener> failedListeners) {
+      return new BatchDelivery(changes, lastChangeId, List.copyOf(failedListeners));
+    }
+
+    private long firstChangeId() {
+      return changes.get(0).getId();
+    }
   }
 }
